botões de som e componetes
Co-authored-by: pindread <iarobotico@users.noreply.github.com>
Co-authored-by: Naoeofrancesco <Naoeofrancesco@users.noreply.github.com>
Co-authored-by: JPSouza12 <JPSouza12@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
